<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Text Instead?</string>
    
    <string name="unregistered_contact">(Unregistered)</string>
    
    <string name="status_on">On</string>
    <string name="status_off">Off</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    
    <string name="main_status">Text Instead? is now</string>
    <string name="main_status_enabled">ENABLED</string>
    <string name="main_status_disabled">DISABLED</string>
    <string name="main_hint">Touch the icon to enable or disable the application.</string>
    
    <string name="questionDialog_title">What Would You Like to Do?</string>
    <string name="questionDialog_message">You couldn\'t reach\n\n%1$s - %2$s\n\nvia phone call.</string>
    <string name="questionDialog_sendSms">Send Message</string>
    <string name="questionDialog_callAgain">Call Again</string>
    <string name="questionDialog_remindLater">Remind Me Later</string>
    
    <string name="messageDialog_title">Select a Message</string>
    <string name="messageDialog_newSms">&lt; Write a New Message &gt;</string>
    <string name="messageDialog_error">There is no custom message defined. You can define your custom messages from application preferences.</string>
    
    <string name="reminderDialog_title">Set Your Reminder</string>
    <string name="reminderDialog_info">Select after how much time reminder will run. (Hours:Minutes)</string>
    <string name="reminderDialog_hint">Optional Reminder Message</string>
    <string name="reminderDialog_set">Set</string>
    
    <string name="reminderNotification_title">%1$s - %2$s</string>
    <string name="reminderNotification_text">You couldn\'t reach this person.</string>
    <string name="reminderNotification_ticker">Call or text %1$s - %2$s!</string>
    <string name="reminderNotification_sendSms">Send Message</string>
    <string name="reminderNotification_callAgain">Call Again</string>
    
    <string name="helpDialog_title">Help</string>
    <string name="helpDialog_message_main">Welcome to Text Instead? application.\n\nThis application provides you with advanced features like sending messages that you can pre-define and customize for sending after an unsuccessful outgoing call you make, calling that person again and setting a reminder to try again later.\n\nYou can access application preferences and extra options from the buttons on the bar at the top of the screen.</string>
    <string name="helpDialog_message_preferences">Welcome to Preferences screen.\n\nIn this screen,\n\n* You can set after how much time the window that is shown after an unsuccessful call should be shown.\n\n* You can pre-define your custom messages that you can use while sending messages.\n\n* You can set sound and vibration options for the reminders that you will set.</string>
    <string name="helpDialog_message_messages" formatted="false">Welcome to Custom Messages screen.\n\nIn this screen, you can pre-define your custom messages that you can use while sending messages.\n\nYou can use some variables in your messages. The special characters you will write in your messages will be replaced by their real values when you will use the messages and this way, you get customized messages. You can use the variables below:\n\n%1% = first name of person\n%2% = full name of person\n\nFor example; for a person named \"Tom Riddle\"\n\n\"Can you call me back %1%?\" message will be converted to \"Can you call me back Tom?\",\n\n\"Can you call me back %2%?\" message will be converted to \"Can you call me back Tom Riddle?\".</string>
    
    <string name="aboutDialog_title">About Text Instead?</string>
    <string name="aboutDialog_message">This application is developed by Mehmet Akif Tütüncü.\n\nThe application is completely free. You can use it however you like.\n\nIf you are interested in the source codes of the application, you can send an email about this to the developer.\n\nPlease let the developer know about your opinions, suggestions and errors.\n\nHope you can reach the people you call&#8230;</string>
    
    <string name="preferences_general_title">General</string>
    <string name="preferences_delay_title">Delay (Seconds)</string>
    <string name="preferences_delay_summary">Dialog after the call will be shown after %1$s second(s).</string>
    <string name="preferences_messages">Custom Messages</string>
    <string name="preferences_messages_summary">Pre-define your custom messages to pick later.</string>
    <string name="preferences_messages_1">Message 1</string>
    <string name="preferences_messages_2">Message 2</string>
    <string name="preferences_messages_3">Message 3</string>
    <string name="preferences_messages_4">Message 4</string>
    <string name="preferences_messages_5">Message 5</string>
    <string name="preferences_messages_notSet">(Not defined)</string>
    <string name="preferences_reminder">Reminder</string>
    <string name="preferences_reminder_sound_status">Sound</string>
    <string name="preferences_reminder_sound">Notification Sound</string>
    <string name="preferences_reminder_vibration">Vibration</string>
    
    <string name="menu_more">More</string>
    <string name="menu_rate">Rate/Comment</string>
    <string name="menu_contact">Contact Developer</string>
    <string name="menu_website">Developer\'s Website</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Application</string>
    
    <string name="contact_subject">About Text Instead?</string>

</resources>