<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_general_title" >
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/preferences_delay_entries"
            android:entryValues="@array/preferences_delay_entries"
            android:key="preference_delay"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/preferences_delay_summary"
            android:title="@string/preferences_delay_title" />

        <Preference
            android:key="preference_messages"
            android:summary="@string/preferences_messages_summary"
            android:title="@string/preferences_messages" />
    </PreferenceCategory>

</PreferenceScreen>