<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/main_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton_main_status"
            android:layout_width="@dimen/statusIcon"
            android:layout_height="@dimen/statusIcon"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:padding="@dimen/padding_small"
            android:background="@color/transparent"
            android:src="@drawable/app_icon_web" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/main_status" />

            <TextView
                android:id="@+id/textView_main_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/main_status_enabled"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
